--- a/a-nest/package.json
+++ b/a-nest/package.json
@@ -36,8 +36,10 @@
     "@nestjs/core": "^8.2.1",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.2.1",
+    "@nestjs/platform-socket.io": "^8.2.3",
     "@nestjs/swagger": "^5.1.4",
     "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/websockets": "^8.2.3",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -61,6 +63,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.11.7",
     "@types/passport-local": "^1.0.34",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
