--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.11.12",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
