--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@types/gravatar": "^1.8.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "react": "^17.0.2",
