--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.24.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
+    "gravatar": "^1.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-refresh": "^0.11.0",
