--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "react-refresh": "^0.11.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^8.1.0",
     "style-loader": "^3.3.1",
     "swr": "^0.4.2",
     "ts-node": "^10.4.0",
