--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@types/gravatar": "^1.8.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "autosize": "^5.0.1",
     "axios": "^0.24.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
@@ -39,6 +40,7 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
+    "@types/autosize": "^4.0.1",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.11.14",
     "@types/react-router": "^5.1.17",
