--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -1,7 +1,3 @@
 {
-  "extends": ["plugin:prettier/recommended"],
-  "parserOptions": {
-    "sourceType": "module",
-    "ecmaVersion": 2021
-  }
+  "extends": ["plugin:prettier/recommended", "react-app"]
 }
