--- a/front/package.json
+++ b/front/package.json
@@ -23,8 +23,10 @@
     "axios": "^0.24.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
+    "dayjs": "^1.10.7",
     "gravatar": "^1.8.2",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-refresh": "^0.11.0",
     "react-router": "^5.2.0",
@@ -34,16 +36,17 @@
     "style-loader": "^3.3.1",
     "swr": "^1.0.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
     "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/preset-typescript": "^7.12.16",
     "@types/autosize": "^4.0.1",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.11.19",
+    "@types/react-custom-scrollbars": "^4.0.10",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
     "@types/webpack": "^5.28.0",
