--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@types/gravatar": "^1.8.3",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-mentions": "^4.1.5",
     "autosize": "^5.0.1",
     "axios": "^0.24.0",
     "cross-env": "^7.0.3",
@@ -28,10 +29,12 @@
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-mentions": "^4.3.0",
     "react-refresh": "^0.11.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.1.0",
+    "regexify-string": "^1.0.17",
     "socket.io-client": "^4.2.0",
     "style-loader": "^3.3.1",
     "swr": "^1.0.1",
