--- a/front/package.json
+++ b/front/package.json
@@ -39,7 +39,8 @@
     "style-loader": "^3.3.1",
     "swr": "^1.0.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -53,6 +54,7 @@
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
     "@types/webpack": "^5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^4.7.2",
     "babel-loader": "^8.2.3",
     "eslint": "^8.6.0",
